# SPECTER-C2

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  buf.gen.yaml  buf.yaml  docker-compose.yml  specter_c2_technical_specification.docx
.claude/: settings.local.json
crates/specter-client/: Cargo.toml
crates/specter-client/src/: app.rs  config.rs  event_handler.rs  grpc_client.rs  lib.rs  main.rs  notifications.rs  tui.rs
crates/specter-client/src/commands/: completion.rs  history.rs  mod.rs
crates/specter-client/src/input/: mod.rs
crates/specter-client/src/search/: fuzzy.rs
crates/specter-client/src/ui/: chat_panel.rs  console.rs  context_panel.rs  layout.rs  main_panel.rs  mod.rs  output_format.rs  palette.rs  session_graph.rs  session_list.rs  status_bar.rs
crates/specter-client/tests/: command_tests.rs  completion_tests.rs  fuzzy_tests.rs
crates/specter-common/: Cargo.toml  build.rs
crates/specter-common/proto/specter/v1/: azure.proto  builder.proto  campaigns.proto  certificates.proto  collaboration.proto  listeners.proto  modules.proto  operation_logs.proto  operators.proto  profiles.proto  reports.proto  sessions.proto  socks.proto  specter_service.proto  tasks.proto  webhooks.proto
crates/specter-common/src/: checkin.rs  error.rs  lib.rs
crates/specter-server/: Cargo.toml
crates/specter-server/src/: lib.rs  main.rs  module_args.rs  operation_log.rs  server.rs
crates/specter-server/src/audit/: mod.rs
crates/specter-server/src/auth/: ca.rs  interceptor.rs  mod.rs  mtls.rs
crates/specter-server/src/builder/: config_gen.rs  formats.rs  mod.rs  obfuscation.rs  yara.rs
crates/specter-server/src/campaign/: mod.rs
crates/specter-server/src/collaboration/: chat.rs  mod.rs
crates/specter-server/src/db/: migrations.rs  mod.rs
crates/specter-server/src/event/: mod.rs  webhooks.rs
crates/specter-server/src/grpc/: mod.rs
crates/specter-server/src/listener/: azure_listener.rs  checkin_processor.rs  dns_listener.rs  mod.rs  ws_handler.rs
crates/specter-server/src/module/: mod.rs
crates/specter-server/src/profile/: compiler.rs  mod.rs  parser.rs  schema.rs  store.rs  transform.rs
crates/specter-server/src/redirector/: certs.rs  deploy.rs  fronting.rs  health.rs  mod.rs  rotation.rs
crates/specter-server/src/reports/: mod.rs
crates/specter-server/src/session/: mod.rs
crates/specter-server/src/socks/: mod.rs
crates/specter-server/src/task/: mod.rs
crates/specter-server/tests/: audit_tests.rs  auth_tests.rs  azure_listener_tests.rs  beacon_shim_tests.rs  builder_tests.rs  ca_tests.rs  campaign_tests.rs  dns_listener_tests.rs  e2e_payload_test.rs  listener_tests.rs  module_repo_tests.rs  profile_tests.rs  profile_yaml_tests.rs  redirector_tests.rs  session_manager_tests.rs  socks_tests.rs  task_dispatcher_tests.rs
docs/: README.md  client.md  deployment-guide.md  evasion-playbook.md  implant.md  local-evidence-2026-04-27.md  module-validation-matrix.md  operations.md  opsec-telemetry-review.md  phase0-beacon-crash-repro.md  phase1.3-redirector-validation.md  phase2-memory-layout-contract.md  phase2-next-strategy.md  protocols.md  resident-memory-layout-plan.md  roadmap-traceability-audit-2026-04-29.md  roadmap.md  teamserver.md  transport-builder-profile-validation.md  ui-data-path-validation-2026-04-28.md  web-ui.md
implant/: Makefile
profiles/: generic-https.yaml  (+1 more)
tools/mock-implant/: Cargo.toml
tools/mock-implant/src/: main.rs
(+270 files in other folders)
