[package]
name = "specter-client"
version.workspace = true
edition.workspace = true

[dependencies]
specter-common = { path = "../specter-common" }
tonic = { version = "0.12", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["clock"] }
prost-types = "0.13"
dirs = "5"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rpassword = "5"
