[package]
name = "specter-common"
version.workspace = true
edition.workspace = true

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.12"
